<resources>
    <string name="app_name">BMI analyzer</string>
    <string name="next">Next</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="re_password">Re-Password</string>
    <string name="email">Email</string>
    <string name="welcome">Welcome Back</string>
    <string name="login_message">If you already have an account, login</string>
    <string name="login">Login</string>
    <string name="sign_up_message">If you don\'t have account yet ?</string>
    <string name="sign_up">Sign up</string>
    <string name="create_new_account">Create New Account</string>
    <string name="create_message">If you don\'t already have an account</string>
    <string name="create">Create</string>
    <string name="save_data">Save Data</string>
    <string name="have_account">You have an account?</string>
    <string name="complete">Complete your Information</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="weight">Weight</string>
    <string name="length">Length</string>
    <string name="dob">Date Of Birth</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="dummy_weight">60</string>
    <string name="dummy_height">160</string>
    <string name="dummy_name">Haya</string>
    <string name="hi"> Hi, </string>
    <string name="current_status">Current Status </string>
    <string name="old_status">Old Status</string>
    <string name="add_food">Add Food</string>
    <string name="add_record">Add Record</string>
    <string name="view_food">View Food</string>
    <string name="log_out"><u>Logout</u></string>

    <string name="normal">Normal</string>
    <string name="over_weight">Over Weight</string>
    <string name="under_weight">Under Weight</string>
    <string name="obesity">Obesity</string>

    <string name="LC"> (little Changes)</string>
    <string name="SG"> (still Good)</string>
    <string name="GA"> (go Ahead)</string>
    <string name="BC"> (be Careful)</string>
    <string name="SB"> (so Bad)</string>
    <string name="delta"> (difference between the last two BMI)</string>

    <string name="new_record">New Record</string>
    <string name="date">Date</string>
    <string name="time">Time</string>

    <string name="kg">KG</string>
    <string name="cm">cm</string>

    <string-array name="food_category">
        <item>Fruit</item>
        <item>Vegetables</item>
        <item>Fish</item>
        <item>Meat</item>
        <item>Drinks</item>
        <item>Dessert</item>
        <item>Snacks</item>
        <item>Protein</item>
    </string-array>
</resources>