<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".view.ui.RegesterationActivity"
android:orientation="vertical"
android:background="@drawable/border_background"
    >
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/complete"
    android:textSize="@dimen/thirty_two_sp"
    android:layout_marginTop="@dimen/fifty_dp"
    android:layout_marginHorizontal="@dimen/sixteen_dp"
    android:textStyle="bold"
    android:textColor="@color/blue"
    android:textAlignment="center"/>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/thirty_dp"
    android:layout_marginVertical="@dimen/sixteen_dp"
    android:orientation="horizontal"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textSize="@dimen/sixteen_sp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:layout_gravity="center_vertical"
        />
    <RadioGroup
        android:id="@+id/gender_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/forty_dp">
        <RadioButton
            android:id="@+id/male_rd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textSize="@dimen/twelve_sp"
            android:textColor="@color/blue"
            android:layout_marginHorizontal="@dimen/forty_dp"
           />
        <RadioButton
            android:id="@+id/female_rd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textSize="@dimen/twelve_sp"
            android:textColor="@color/blue"
            android:layout_marginStart="@dimen/forty_dp"/>
    </RadioGroup>
</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/thirty_dp"
        android:layout_marginVertical="@dimen/sixteen_dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textSize="@dimen/sixteen_sp"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            />
        <Button
            android:id="@+id/minus_weight"
            android:layout_width="@dimen/forty_dp"
            android:layout_height="@dimen/forty_dp"
            android:layout_marginStart="@dimen/fifty_dp"
            android:text="@string/minus"
            />
        <TextView
            android:id="@+id/weight_txt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/sixteen_dp"
            android:text="@string/dummy_weight"
            android:textSize="@dimen/sixteen_sp"
            android:gravity="center_vertical"
            android:textStyle="bold"
            />
        <Button
            android:id="@+id/plus_weight"
            android:layout_width="@dimen/forty_dp"
            android:layout_height="@dimen/forty_dp"
            android:layout_marginStart="@dimen/sixteen_dp"
            android:text="@string/plus"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/sixteen_dp"
            android:text="@string/kg"
            android:textSize="@dimen/twelve_sp"
            android:gravity="center_vertical"
            android:textStyle="bold"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/thirty_dp"
        android:layout_marginVertical="@dimen/sixteen_dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/length"
            android:textSize="@dimen/sixteen_sp"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            />
        <Button
            android:id="@+id/minus_length"
            android:layout_width="@dimen/forty_dp"
            android:layout_height="@dimen/forty_dp"
            android:layout_marginStart="@dimen/fifty_dp"
            android:text="@string/minus"
            />
        <TextView
            android:id="@+id/length"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/sixteen_dp"
            android:text="@string/dummy_height"
            android:textSize="@dimen/sixteen_sp"
            android:gravity="center_vertical"
            android:textStyle="bold"
            />
        <Button
            android:id="@+id/plus_length"
            android:layout_width="@dimen/forty_dp"
            android:layout_height="@dimen/forty_dp"
            android:layout_marginStart="@dimen/sixteen_dp"
            android:text="@string/plus"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/sixteen_dp"
            android:text="@string/cm"
            android:textSize="@dimen/twelve_sp"
            android:gravity="center_vertical"
            android:textStyle="bold"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="@dimen/sixteen_dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dob"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:textSize="@dimen/sixteen_sp"
            android:layout_margin="@dimen/sixteen_dp"/>
        <EditText
            android:id="@+id/dob_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:backgroundTint="@color/blue"
            android:editable="false"
            android:focusable="false"
            android:drawableEnd="@drawable/icon_date"
            android:textColor="@color/dark"
            android:foregroundGravity="center_vertical"/>
    </LinearLayout>
<Button
    android:id="@+id/save_data_btn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/thirty_dp"
    android:text="@string/save_data"
    android:textStyle="bold"/>

</LinearLayout>