<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.RegesterationActivity"
    android:orientation="vertical"
    android:background="@drawable/border_background"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"
        android:textSize="@dimen/thirty_two_sp"
        android:layout_marginTop="@dimen/fifty_dp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_message"
        android:textSize="@dimen/sixteen_sp"
        android:layout_margin="@dimen/sixteen_dp"
        android:layout_gravity="center"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:backgroundTint="@color/blue"
        android:layout_margin="@dimen/sixteen_dp"

        >
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:backgroundTint="@color/white"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:backgroundTint="@color/blue"
        android:layout_margin="@dimen/sixteen_dp"
        >
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:backgroundTint="@color/white"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:passwordToggleEnabled="true"
        android:backgroundTint="@color/blue"
        android:layout_margin="@dimen/sixteen_dp"
        >
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:backgroundTint="@color/white"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/re_password"
        app:passwordToggleEnabled="true"
        android:backgroundTint="@color/blue"
        android:layout_margin="@dimen/sixteen_dp"
        >
        <EditText
            android:id="@+id/repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:backgroundTint="@color/white"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/create_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/thirty_dp"
        android:text="@string/create"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/thirty_dp"
        android:orientation="horizontal"
        android:layout_gravity="center"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_account"
            android:gravity="center"

            />
        <TextView
            android:id="@+id/login_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginStart="@dimen/ten_dp"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:gravity="center"
            />
    </LinearLayout>
</LinearLayout>