<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_background"
    tools:context=".view.ui.HomeActivity">

    <TextView
        android:id="@+id/textView"
        style="@style/Theme.BMIAnalyzer.CardText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/thirty_dp"
        android:text="@string/hi"
        android:textSize="@dimen/sixteen_sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/name"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        style="@style/Theme.BMIAnalyzer.CardText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_name"
        android:textSize="@dimen/sixteen_sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sixteen_dp"
        android:text="@string/current_status"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/forty_dp"
        android:layout_margin="@dimen/sixteen_dp"
        android:src="@drawable/thin_border_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/current_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/ten_dp"
        android:text="@string/normal"
        android:textColor="@color/dark"
        app:layout_constraintBottom_toBottomOf="@+id/image"
        app:layout_constraintEnd_toStartOf="@+id/message"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintTop_toTopOf="@+id/image" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SG"
        android:textColor="@color/dark"
        app:layout_constraintBottom_toBottomOf="@+id/current_status"
        app:layout_constraintEnd_toStartOf="@+id/image"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/current_status"
        app:layout_constraintTop_toTopOf="@+id/current_status" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/sixteen_dp"
        android:text="@string/old_status"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/sixteen_dp"
        android:background="@color/blue"
        app:layout_constraintBottom_toTopOf="@+id/add_record_button"
        app:layout_constraintEnd_toEndOf="@+id/image"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:orientation="vertical"
        tools:listitem="@layout/record_item"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:reverseLayout="true"
      />

    <Button
        android:id="@+id/add_food_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sixteen_dp"
        android:text="@string/add_food"
        app:layout_constraintEnd_toStartOf="@+id/add_record_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_view" />

    <Button
        android:id="@+id/add_record_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sixteen_dp"
        android:text="@string/add_record"
        app:layout_constraintBottom_toTopOf="@+id/view_food_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/add_food_button" />

    <Button
        android:id="@+id/view_food_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/sixteen_dp"
        android:text="@string/view_food"
        app:layout_constraintBottom_toTopOf="@+id/logout"
        app:layout_constraintEnd_toEndOf="@+id/add_record_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/add_food_button"
        app:layout_constraintTop_toBottomOf="@+id/add_food_button" />

    <TextView
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:textColor="@color/dark"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_food_button" />

</androidx.constraintlayout.widget.ConstraintLayout>